@@ -1,3 +1,14 @@
+2001-05-14  Richard Henderson  <rth@redhat.com>
+
+	* ehopt.c (get_cie_info): Rename from eh_frame_code_alignment;
+	also collect whether to expect an FDE augmentation.
+	(check_eh_frame): Rewrite as a state machine.  Track where in
+	an FDE we are located, skip any augmentation.
+	(eh_frame_estimate_size_before_relax): Get code alignment from
+	the fragment subtype.
+	(eh_frame_relax_frag, eh_frame_convert_frag): Likewise.
+	* read.c (emit_leb128_expr): Call check_eh_frame.
+
 2001-05-09  Richard Henderson  <rth@redhat.com>
 
 	* config/tc-ia64.c (generate_unwind_image): Align the fragment
